# EHR_FM

./: .dockerignore  .gitignore  CONFIG_GUIDE.md  DEBUGGING_REPORT.md  Dockerfile  MEDS_TRANSFORMATION_REPORT.md  README.md  SETUP_GUIDE.md  TODO.md  docker-compose.yml  env.example  methods_1.md  pyproject.toml  run_pipeline.sh  temp_.csv  test.ipynb  test_distributed.py  timeline.md
.github/: copilot-instructions.md
scripts/: 24hr.py  24hr_config.yaml  ICU_LOS_IMPLEMENTATION.txt  efficiency_config.yaml  efficiency_metrics.py  eval.py  eval_config.yaml  eval_final.py  eval_final_1.py  eval_final_config.yaml  gen_plots.py  infer.py  infer_trajectory.py  mc_eval.py  mc_eval_config.yaml  mc_eval_test_config.yaml  methods.md  mortality_20traj_config.yaml  mortality_pred_config.yaml  mortality_prediction.py  mortality_prediction_1.py  mortality_prediction_2.py  mortality_prediction_sim.py  mortality_test_config.yaml  plot.yaml  run_infer.sh
scripts/MEDS_transforms/mimic/: run.sh
scripts/MEDS_transforms/mimic/data/mimic-iv-pre-meds/.logs/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/: __init__.py  distributed.py  eval.py  log.py  manager.py  metrics.py  model.py  train.py  utils.py
src/conf/: config.yaml
src/conf/data/: mimic_data.yaml
src/conf/model/: gpt2_small_2exp.yaml  gpt2_small_4exp.yaml  gpt2_small_8exp.yaml  gpt2_small_moe.yaml  gpt2_small_monolith.yaml  gpt2_small_monolith_tuned.yaml  gpt2_tiny.yaml
src/conf/train/: 2_exp.yaml  4_exp.yaml  8_exp.yaml  default.yaml  monolith.yaml  monolith_million.yaml  monolith_million_fixed.yaml  tiny.yaml
src/tokenize/: constants.py  mappings.py  patterns.py  vocabulary.py
src/tokenize/common/: quantization.py
src/tokenize/configs/dataset/: mimic.yaml
src/tokenize/datasets/: base.py
src/tokenizer/: constants.py  patterns.py  run_stages.py  run_tokenization.py
src/tokenizer/common/: basic.py  time_interval.py
src/tokenizer/configs/: tokenization.yaml  tokenization_test.yaml  tokenization_train.yaml
src/tokenizer/configs/dataset/: minimal.yaml
src/tokenizer/datasets/: base.py  ed.py  hospital_mortality.py  mimic_icu.py
src/tokenizer/mimic/: preprocessors.py
src/utils/: __init__.py  artifact_loader.py
